--- a/result/2021-12-25.md
+++ b/result/2021-12-25.md
@@ -57,3 +57,4 @@
 57. [海底捞员工也懵了](https://s.weibo.com//weibo?q=%23%E6%B5%B7%E5%BA%95%E6%8D%9E%E5%91%98%E5%B7%A5%E4%B9%9F%E6%87%B5%E4%BA%86%23&Refer=top) 144761
 58. [多家饭店招牌带青花椒被告](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%AE%B6%E9%A5%AD%E5%BA%97%E6%8B%9B%E7%89%8C%E5%B8%A6%E9%9D%92%E8%8A%B1%E6%A4%92%E8%A2%AB%E5%91%8A%23&Refer=top) 52697
 59. [醒狮舞蹈融入南拳马步南派舞狮](https://s.weibo.com//weibo?q=%23%E9%86%92%E7%8B%AE%E8%88%9E%E8%B9%88%E8%9E%8D%E5%85%A5%E5%8D%97%E6%8B%B3%E9%A9%AC%E6%AD%A5%E5%8D%97%E6%B4%BE%E8%88%9E%E7%8B%AE%23&Refer=top) 30258
+60. [感受中国温度的一年](https://s.weibo.com//weibo?q=%23%E6%84%9F%E5%8F%97%E4%B8%AD%E5%9B%BD%E6%B8%A9%E5%BA%A6%E7%9A%84%E4%B8%80%E5%B9%B4%23&Refer=top) 18167
